--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -12,11 +12,29 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600; /* Poids de 600 pour les titres */
 }
 
+
+
 /* Applique un poids de 600 pour les balises <strong> */
 strong {
   font-weight: 600; /* Poids de 600 pour les éléments <strong> */
 }
 
+h2 {
+  margin-bottom: 30px; /* Espacement sous les titres pour aérer */
+}
+
+/* Pour les titres */
+.section-title {
+  margin-bottom: 20px; /* Ajuste l'espace sous le titre */
+  text-align: left; /* Assure que les titres sont alignés à gauche (ou à centre si tu préfères) */
+  font-weight: bold; /* Optionnel, pour les rendre plus visibles */
+}
+
+/* Si tu veux garantir un espacement similaire pour tous les éléments */
+.about-section h2, 
+.about-section h3 {
+  margin-bottom: 20px;
+}
 
 
 /* Style pour la section hero */
@@ -79,7 +97,7 @@ strong {
 
 .about-section h2 {
   font-size: 2.5rem;
-  margin-bottom: 20px;
+  margin-bottom: 80px;
 }
 
 .about-section p {
@@ -97,6 +115,13 @@ strong {
 .about-section li {
   margin-bottom: 15px;
 }
+
+.about-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
 
 /* Personnalisation des barres de progression si besoin */
 .progress {
